--- a/app/views/contact/show.html.erb
+++ b/app/views/contact/show.html.erb
@@ -1,14 +1,36 @@
 <h1>#OurContact</h1>
 <br>
+<table>
+<thead>
+    <tr>
+        <td>Nom :</td>
+        <td>Prénom :</td>
+        <td>Github :</td>
+        <td>Numero de telephone :</td>
+        <td>Email :</td>
+    </tr>
+  </thead>
+  <tbody>
 <% for index_person in 0 ... @list_person_in_team.size%>
-
-  <table>
-    <%= @list_person_in_team[index_person].first_name %>&nbsp;
-      <%= @list_person_in_team[index_person].last_name %>&nbsp;
-        <%= @list_person_in_team[index_person].url_github %>&nbsp;
+    
+      <tr>
+          <td>
+         <%= @list_person_in_team[index_person].first_name %>&nbsp;
+          </td>
+          <td>      
+              <%= @list_person_in_team[index_person].last_name %>&nbsp;
+          </td>
+          <td>
+        <%= @list_person_in_team[index_person].url_github %>&nbsp
+          </td>
+          <td>
             <%= @list_person_in_team[index_person].phone_number %>&nbsp;
+          </td>
+          <td>
                 <%= @list_person_in_team[index_person].email %>
-
-
-  </table>
-  <% end %>
+          </td>
+          </tr>
+      <% end %>
+    </tbody>
+    </table>
+  
